@@ -1,1 +1,1 @@
-3.7.0beta
+3.7.0beta2
