@@ -18,7 +18,7 @@ http://libtiff.maptools.org/</A>
 
 <B>Latest Stable Release</B>: <A HREF="v3.6.1.html">v3.6.1</A><BR>
 
-<B>Latest Development Release</B>: <A HREF="v3.7.0beta.html">v3.7.0beta</A><BR>
+<B>Latest Development Release</B>: <A HREF="v3.7.0beta2.html">v3.7.0beta2</A><BR>
 
 <B>Master Download Site</B>: <A HREF="ftp://ftp.remotesensing.org/pub/libtiff">ftp.remotesensing.org</A> , directory pub/libtiff<BR>
 
@@ -93,7 +93,7 @@ and <a href="addingtags.html">Adding New Tags</a>
 <P>
 <HR>
 <em> 
-Last updated  $Date: 2004-09-19 10:44:19 $.
+Last updated  $Date: 2004-10-02 13:54:51 $.
 </em> 
 
 </BODY>
