@@ -1,3 +1,14 @@
+2004-10-02  Andrey Kiselev  <dron@remotesensing.org>
+
+	* libtiff 3.7.0beta2 released.
+
+	* libtiff/{tif_aux.c, tif_compress.c, tif_dirinfo.c, tif_dirwrite.c,
+	tif_extension.c, tif_fax3.c, tif_luv.c, tif_packbits.c,
+	tif_pixarlog.c, tif_write.c}: Added checks for failed memory
+	allocations and	integer overflows (Dmitry V. Levin).
+
+	* libtiff/tiff.h: Missed TIFF_BIGTIFF_VERSION constant added.
+
 2004-10-01  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_open.c: added a more informative message if a BigTIFF
